внедрил блок WAY в верстку

--- a/v3.0/v2.html
+++ b/v3.0/v2.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="v2.css">
 </head>
 <body>
-  <!-- КОНТЕЙНЕР №1 -->
+                                           <!-- КОНТЕЙНЕР №1 -->
 <div class="main">
 
   <div class="bg-text-top">
@@ -163,7 +163,7 @@
 
 </div>
 
-<!-- КОНТЕЙНЕР №2 -->
+                                          <!-- КОНТЕЙНЕР №2 -->
 <div class="Blok">
     <div class="struktur">
         <img src="image.v2/gren-foto.png" alt="Фон зелёного блока" class="gren-img">
@@ -237,7 +237,7 @@
  
 </div>
 
-<!-- КОНТЕЙНЕР №4 -->
+                                          <!-- КОНТЕЙНЕР №4 -->
 <div class="four">
   
     <!-- КОНТЕЙНЕР С ТЕКСТОМ  -->
@@ -344,6 +344,87 @@
       <img src="image.v2/center.png" alt="Центральное изображение" class="center-img">
     </picture>
       
+</div>
+
+<div class="why-block">
+  
+  
+                                        <!-- КОНТЕЙНЕР WAY...  -->
+<div class="why">
+    <!--ФОН-->
+    <div class="why-image">
+        <picture class="why-image__picture">
+            <!-- ПК: centar.png -->
+            <source media="(min-width: 1280px)" srcset="image.v2/centar.png">
+            <!-- Планшет: center.png -->
+            <source media="(min-width: 768px)" srcset="image.v2/center.png">
+            <!-- Телефон: center.png -->
+            <img src="image.v2/center.png" alt="Центральное изображение" class="why-image__img">
+        </picture>
+    </div>
+    <div class="why-info">
+        <!-- верхний блок с названием блока  -->
+        <div class="why__title">
+            Почему мамы выбирают&nbsp;нашу доставку?
+        </div>
+        <!-- нижний блок с инфой  -->
+        <div class="why-list">
+            <!-- под-блок 1 -->
+            <div class="why-list-item">
+                <!-- блок с кругом -->
+                <div class="why-list-item-icon">
+                    <img src="image.v2/one.svg" alt="Эмодзи" class="why-list-item-icon__img">
+                </div>
+                <!-- блок с текстом -->
+                <div class="why-list-item-content">
+                    <div class="why-list-item__title">Экологичность:</div>
+                    <div class="why-list-item__text">
+                        продукты выращиваются без применения химии
+                    </div>
+                </div>
+            </div>
+            <!-- под-блок 2 -->
+            <div class="why-list-item">
+                <div class="why-list-item-icon">
+                    <img src="image.v2/two.svg" alt="Эмодзи 2" class="why-list-item-icon__img">
+                </div>
+                <div class="why-list-item-content">
+                    <div class="why-list-item__title">Сбалансированность:</div>
+                    <div class="why-list-item__text">
+                        наши блюда составляют ведущие диетологи по&nbsp;уникальной рецептуре
+                    </div>
+                </div>
+            </div>
+            <!-- под-блок 3 -->
+            <div class="why-list-item">
+                <div class="why-list-item-icon">
+                    <img src="image.v2/three.svg" alt="Эмодзи 2" class="why-list-item-icon__img">
+                </div>
+                <div class="why-list-item-content">
+                    <div class="why-list-item__title">Индивидуальность:</div>
+                    <div class="why-list-item__text">
+                        для вашего выбора мы предоставляем&nbsp;большое кол-во&nbsp;вариантов блюд
+                    </div>
+                </div>
+            </div>
+            <!-- под-блок 4 -->
+            <div class="why-list-item">
+                <div class="why-list-item-icon">
+                    <img src="image.v2/four.svg" alt="Эмодзи 2" class="why-list-item-icon__img">
+                </div>
+                <div class="why-list-item-content">
+                    <div class="why-list-item__title" >Польза:</div>
+                    <div class="why-list-item__text">
+                        питаясь нашими продуктами, Вы можете быть уверены в своем здоровье&nbsp;и здоровье ребенка
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+      
+
 </div>
 
 
